--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 18
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: 18
+        distribution: 'temurin'
+        java-version: 17
     - name: Build with Gradle
       run: ./gradlew build
     - name: Test with JUnit
